--- a/derecho.html
+++ b/derecho.html
@@ -237,7 +237,7 @@
               aria-expanded="true"
               aria-controls="collapseOne"
             >
-              Vacaciones
+              El contrato de trabajo
             </button>
           </h2>
           <div
@@ -247,16 +247,74 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body container m-3 text-acordion">
-              Solo el trabajador en planilla tendrá 30 días de vacaciones luego
-              de cumplir 1 año en su centro de trabajo. Los trabajadores
-              part-time no tienen estipuladas las vacaciones, pero en algunas
-              empresas, mediante el convenio de la OIT, se les otorga 7 días de
-              descanso luego de 1 año. En caso que el trabajador no quiera salir
-              de vacaciones, la norma estipula que solo podrá vender la mitad de
-              sus vacaciones. En el caso de un trabajador regular, solo serán 15
-              días vendidos y 15 descansados.
+              El contrato de trabajo es el acuerdo entre trabajador y empleador. En él se determinan las características de la relación laboral. Contiene un conjunto de condiciones que ambos se comprometen a cumplir. Todo contrato tiene 3 elementos esenciales: la prestación del servicio, la remuneración y la subordinación.
+              <br>
+              <br>
+              <h2>¿Cuál es la importancia del contrato de trabajo?</h2>
+              <br>
+Su importancia consiste en brindar seguridad a las partes, sobre todo al trabajador. El contrato otorga derechos, deberes y obligaciones a ambas partes. Tales como la obligación del trabajador de prestar el servicio y la del empleador de pagar la remuneración que corresponde.
+<br>
+<br>
+Sin embargo, el contrato laboral no es necesario para presumir la existencia de una relación de trabajo. De esa manera, que no se haya firmado dicho documento no niega las obligaciones del empleador ante su trabajador. Esto se conoce como el Principio de primacía de la realidad.
+<br>
+<br>
+<h2>¿Qué datos contiene un contrato de trabajo?</h2>
+<br>
+Los datos que debe contener todo contrato de trabajo son los siguientes:
+<br>
+<br>
+<ul>
+  <li>Fecha y lugar de la celebración del contrato.</li>
+  <br>
+  <li>Datos del trabajador y del empleador o empresa.</li>
+  <br>
+  <li>Actividades que conforman el trabajo.</li>
+  <br>
+  <li>Condiciones de la prestación del trabajo.</li>
+  <br>
+  <li>Remuneración y otros beneficios.</li>
+  <br>
+  <li>Tiempo de vigencia del contrato</li>
+  <br>
+  <li>Otros aspectos.</li>
+</ul>
             </div>
           </div>
+        </div>
+        <p>
+          <div class="accordion-item">
+          <button
+            style="
+              background-color: rgba(1, 132, 184, 0.9);
+              color: white;
+              border: solid 1px white;
+              font-size: 25px;
+              font-weight: 400;
+              width: 100vw;
+              height: 60px;
+              text-align: start;
+            "
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseExample"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+          >
+            <div class="title-box">Vacaciones</div>
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="accordion-body container m-3 text-acordion">
+            Solo el trabajador en planilla tendrá 30 días de vacaciones luego de
+            cumplir 1 año en su centro de trabajo. Los trabajadores part-time no
+            tienen estipuladas las vacaciones, pero en algunas empresas,
+            mediante el convenio de la OIT, se les otorga 7 días de descanso
+            luego de 1 año. En caso que el trabajador no quiera salir de
+            vacaciones, la norma estipula que solo podrá vender la mitad de sus
+            vacaciones. En el caso de un trabajador regular, solo serán 15 días
+            vendidos y 15 descansados.
+          </div>
+        </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
@@ -486,21 +544,7 @@
       </div>
     </div>
     <!-- section 5 -->
-    <div class="section5 vertical">
-      <div class="espacio-top"></div>
-      <div class="espacio-center horizontal">
-        <div class="section5-a vertical">
-          <h2>section 1</h2>
-        </div>
-        <div class="section5-b vertical">
-          <h2>section 2</h2>
-        </div>
-        <div class="section5-c vertical">
-          <h2>section 3</h2>
-        </div>
-      </div>
-      <div class="espacio-bottom"></div>
-    </div>
+    <div class="footer-container"></div>
     <!-- footer Copyright -->
     <footer>
       <div class="footer vertical">
