--- a/Registrar.html
+++ b/Registrar.html
@@ -18,7 +18,9 @@
       <div class="container-login100">
         <div class="wrap-login100">
           <form class="login100-form validate-form">
-            <span class="login100-form-title p-b-43"> Bienvenido </span>
+            <span class="login100-form-title p-b-43">
+              Registre su información
+            </span>
 
             <div
               class="wrap-input100 validate-input"
@@ -26,41 +28,47 @@
             >
               <input class="input100" type="text" name="email" />
               <span class="focus-input100"></span>
-              <span class="label-input100">Email o Usuario</span>
+              <span class="label-input100">Nombres y apellidos</span>
             </div>
-
             <div
               class="wrap-input100 validate-input"
-              data-validate="Password is required"
+              data-validate="Valid email is required: ex@abc.xyz"
             >
-              <input class="input100" type="password" name="pass" />
+              <input class="input100" type="text" name="email" />
               <span class="focus-input100"></span>
-              <span class="label-input100">Contraseña</span>
+              <span class="label-input100">Profesión</span>
             </div>
-
-            <div class="flex-sb-m w-full p-t-3 p-b-32">
-              <div class="contact100-form-checkbox">
-                <input
-                  class="input-checkbox100"
-                  id="ckb1"
-                  type="checkbox"
-                  name="remember-me"
-                />
-                <label class="label-checkbox100" for="ckb1"> Recuerdame </label>
-              </div>
-
-              <div>
-                <a href="#" class="txt1"> ¿Olvidaste tu contraseña? </a>
-              </div>
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Valid email is required: ex@abc.xyz"
+            >
+              <input class="input100" type="text" name="email" />
+              <span class="focus-input100"></span>
+              <span class="label-input100">Edad</span>
             </div>
-
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Valid email is required: ex@abc.xyz"
+            >
+              <input class="input100" type="text" name="email" />
+              <span class="focus-input100"></span>
+              <span class="label-input100">Número Móvil</span>
+            </div>
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Valid email is required: ex@abc.xyz"
+            >
+              <input class="input100" type="text" name="email" />
+              <span class="focus-input100"></span>
+              <span class="label-input100">Correo electrónico</span>
+            </div>
             <div class="container-login100-form-btn">
-              <button class="login100-form-btn">Ingresar</button>
+              <button class="login100-form-btn">Registrar</button>
             </div>
 
             <div class="text-center p-t-46 p-b-20">
-              <span class="txt2"> ¿No tienes cuenta aún? </span>
-              <a href="Registrar.html" class="txt1"> Registrate ahora </a>
+              <span class="txt2"> ¿tienes cuenta? </span>
+              <a href="Login.html" class="txt1"> Logueate </a>
             </div>
           </form>
 
@@ -72,15 +80,6 @@
       </div>
     </div>
     <!-- <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-
-    <script src="vendor/animsition/js/animsition.min.js"></script>
-
-    <script src="vendor/bootstrap/js/popper.js"></script> -->
     <!-- <script src="vendor/bootstrap/js/bootstrap.min.js"></script> -->
-    <!-- <script src="vendor/select2/select2.min.js"></script>
-    <script src="vendor/daterangepicker/moment.min.js"></script>
-    <script src="vendor/daterangepicker/daterangepicker.js"></script>
-    <script src="vendor/countdowntime/countdowntime.js"></script> -->
-    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
