ajustes de diseño index y calculadora

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
             <h1>Trabaja Decente</h1>
           </div>
           <div class="horizontal">
-            <button class="home">Inicio</button>
-            <button class="about">Sobre nosotros</button>
             <button class="services">Servicios</button>
             <button class="news">Noticias</button>
             <button class="contact">Contactanos</button>
@@ -123,7 +121,7 @@
 
           <div class="card1 vertical">
             <div>
-              <a href="calculadora.html">
+              <a href="salarycalculator.html">
                 <img class="img-card" src="imagenes/calculator.png" alt="" />
               </a>
             </div>
@@ -151,23 +149,17 @@
       </div>
       <!-- section 5 -->
       <div class="section5 vertical">
-        <div class="espacio-top"></div>
-        <div class="espacio-center horizontal">
-          <div class="section5-a vertical">
-            <h2>section 1</h2>
-          </div>
-          <div class="section5-b vertical">
-            <h2>section 2</h2>
-          </div>
-          <div class="section5-c vertical">
-            <h2>section 3</h2>
-          </div>
+        <h2 class="title-section-5">Consultas y asesorías</h2>
+        <div class="text-section-5"><p class="parrafo-section-5">Tenemos a tu disposición una sección para generar consultas o para que nuestros asesores se pongan en contacto contigo y brindarte toda la ayuda que necesites. Nuestros asesores son abogados especializados en leyes laborales quienes estará encantados de ayudarte.</p></div>
+        <img class="img-section-5" src="imagenes/negotiations-about-contract-terms-concept-hand-pointing-at-document-closeup.jpg" alt="">
+        <button class="btn-direct"> <a href=""></a> Consulta aquí</button>
         </div>
         <div class="espacio-bottom"></div>
       </div>
       <!-- footer Copyright -->
       <div class="footer vertical">
         <p>© Copyright ©2022 All rights reserved</p>
+        <a href='https://www.freepik.es/fotos/negocios'>Foto de Negocios creado por yanalya - www.freepik.es</a>
       </div>
     </div>
     <!-- JavaScript Bundle with Popper -->
