--- a/salarycalculator.html
+++ b/salarycalculator.html
@@ -21,9 +21,11 @@
           <h1 style="color: white">SalaryCalculator</h1>
         </div>
         <div class="horizontal">
-          <button class="home">Inicio</button>
+          <button class="home">
+            <a class="btn-inicio" href="index.html">Inicio</a>
+          </button>
 
-          <button class="services">Servicios</button>
+          <button class="services">Calculadora de Tributos</button>
 
           <button class="contact">Contactanos</button>
           <a href="Login.html"> <button class="login">Login</button></a>
@@ -115,21 +117,6 @@
         </div>
       </div>
       <!-- section informativa -->
-      <div class="section5 vertical">
-        <div class="espacio-top"></div>
-        <div class="espacio-center horizontal section-info">
-          <div class="section5-a vertical">
-            <h2>section 1</h2>
-          </div>
-          <div class="section5-b vertical">
-            <h2>section 2</h2>
-          </div>
-          <div class="section5-c vertical">
-            <h2>section 3</h2>
-          </div>
-        </div>
-        <div class="espacio-bottom"></div>
-      </div>
       <!-- footer Copyright -->
       <div class="footer vertical color-fondo">
         <p style="color: white">© Copyright ©2022 All rights reserved</p>
