--- a/salarycalculator.html
+++ b/salarycalculator.html
@@ -26,7 +26,9 @@
           <button class="services">Servicios</button>
 
           <button class="contact">Contactanos</button>
-          <a href="Login.html"> <button class="login">Login</button></a>
+          <a href="Login.html" style="display: none">
+            <button class="login">Login</button></a
+          >
         </div>
       </div>
       <div class="espacios">
